# vpl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  cabal.project  main.hs  vpl.cabal  vplkb.hs
.github/workflows/: haskell.yml
app/: Main.hs  Vplkb.hs
notes/: esd-foolishness-natural-language.md  vpl-suck.md
ref/: why-vpls-fail.chatgpt.md
tmp/: hakyll-help.sh
vplkb/: vplkb.cabal
vplkb/src/: Vplkb.hs
web/: about.md  contact.md  index.html  site.hs  web.cabal
web/css/: default.css
web/posts/: 2023-08-17-Gippity-on-VPL-failures.md
web/templates/: default.html
