cabal-version:      3.0
name:               web
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable site
  import:           warnings
  main-is:          site.hs
  build-depends:    base ^>=4.17.2.1
                  , hakyll >= 4.16.2.2
                  , vplkb >= 0.1
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
